k8s/redis-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis-service
  template:
    metadata:
      labels:
        component: redis-service
    spec:
      containers:
        - name: redis-service
          image: redis:7
          ports:
            - containerPort: 6379
