k8s/web-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web-service
  template:
    metadata:
      labels:
        component: web-service
    spec:
      containers:
        - name: web-service
          image: mises/web-service
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
