k8s/word-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: word-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: word-service
  template:
    metadata:
      labels:
        component: word-service
    spec:
      containers:
        - name: word-service
          image: mises/word-service
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 8091
