k8s/exam-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exam-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: exam-service
  ports:
    - port: 8090
      targetPort: 8090
