k8s/mongo-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mongo-service
  ports:
    - port: 27017
      targetPort: 27017
