k8s/web-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web-service
  ports:
    - port: 1323
      targetPort: 1323
