k8s/word-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: word-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: word-service
  ports:
    - port: 8091
      targetPort: 8091
